First CSS and HTML

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
     <title>Prime Number Function Checker</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
+
 <body>
-    <h1>Prime Number Function Checker</h1>
+    <h1>Prime Number Checker</h1>
+
     <script src="script.js"></script>
+    <section>
+        <div class="ImageContainer">
+            <div class="Upper"></div>
+            <div class="Lower"></div>
+        </div>
+        <div class="LeftSide">
+
+            <input type="text" id="userInput" placeholder="Please input a number">
+
+
+            <div class="dropdown">
+                <button class="dropbtn">Select Method</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                    <a href="#">Link 4</a>
+                    <a href="#">Link 5</a>
+                    <a href="#">Link 6</a>
+                    <a href="#">Link 7</a>
+                </div>
+            </div>
+
+        </div>
+
+        <button type="button">Check Prime</button>
+    </section>
+
 </body>
+
 </html>
