--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Prime Number Checker</h1>
+    <h1>Prime Number Checker BADER BRANCH</h1>
 
     <script src="script.js"></script>
     <section>
