--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <h1>Prime Number Checker</h1>
 
-    <script src="script.js"></script>
     <section>
         <div class="ImageContainer">
             <div class="Upper"></div>
@@ -41,6 +40,8 @@
         <button type="button">Check Prime</button>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.1/math.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
