--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Prime Number Function Checker</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -20,7 +20,7 @@
         </div>
         <div class="LeftSide">
 
-            <input type="text" id="userInput" placeholder="Please input a number">
+            <input type="text" id="userInput" placeholder="Enter number of primes to find">
 
 
             <div class="dropdown">
@@ -36,6 +36,31 @@
                 </div>
             </div>
 
+            <div class="title">
+                Out of <span class="font-weight-bold">3000</span> numbers:
+            </div>
+            <div class="result">
+                <div>
+                    Correctly identified primes: 1000 numbers
+                </div>
+                <div>
+                    Incorrect results: 5000 numbers
+                </div>
+
+                <div>
+                    Accuracy: 58%
+                </div>
+                <div>
+                    Time Spent: 12 ms
+                </div>
+            </div>
+            <div class="resultsTitle">
+                Results
+              </div>      
+  
+              <div class="result">
+                  [1,3,5,7,1,3,5,71,3,5,7]
+              </div>
         </div>
 
         <button type="button">Check Prime</button>
