--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Prime Number Function Checker</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -12,7 +13,6 @@
 <body>
     <h1>Prime Number Checker</h1>
 
-    <script src="script.js"></script>
     <section>
         <div class="ImageContainer">
             <div class="Upper"></div>
@@ -56,15 +56,57 @@
             </div>
             <div class="resultsTitle">
                 Results
-              </div>      
-  
-              <div class="result">
-                  [1,3,5,7,1,3,5,71,3,5,7]
-              </div>
+            </div>
+
+            <div class="result">
+                [1,3,5,7,1,3,5,71,3,5,7]
+            </div>
         </div>
 
         <button type="button">Check Prime</button>
+        
+    <canvas id="myChart" class="pieChart" width="400" height="400"></canvas>
     </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script>
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var config = {
+            type: 'pie',
+            data: {
+                datasets: [{
+                    data: [
+                        60,
+                        40
+                    ],
+                    backgroundColor: [
+                        'red','orange'
+                    ],
+                    label: 'Dataset 1'
+                }],
+                labels: [
+                    'false primes',
+                    'true primes',
+                ]
+            },
+            options: {
+                responsive: false,
+
+            }
+        };
+        var myPieChart = new Chart(ctx, config);
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
 
