--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Prime Number Function Checker</title>
+    <title>Prime Number Generator</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
-    <h1>Prime Number Checker</h1>
+    <h1>Prime Number Generator</h1>
 
     <section>
-        <div class="ImageContainer">
-            <div class="Upper"></div>
-            <div class="Lower"></div>
+        <!-- <div class="ImageContainer"> -->
+        <!-- <div class="Upper"></div> -->
+        <!-- <div class="Lower"></div> -->
         </div>
-        <div class="LeftSide">
+        <div class="col-lg-6">
 
-            <input type="text" id="userInput" placeholder="Enter number of primes to find">
+            <input type="text" id="userInput" placeholder="Upper Bound, Ex.10000">
 
 
             <div class="dropdown">
@@ -57,14 +57,15 @@
                 Results
             </div>
 
-            <div class="result">
-                [1,3,5,7,1,3,5,71,3,5,7]
+            <div id="results">
+                1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 97,1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 97,1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53,
+                59, 61, 67, 71, 73, 79, 83, 97,
             </div>
         </div>
 
         <button type="button">Check Prime</button>
 
-        <canvas id="myChart" class="pieChart" width="400" height="400"></canvas>
+        <canvas id="myChart" class="pieChart" width="400" height="400" ,></canvas>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
@@ -72,26 +73,34 @@
         var ctx = document.getElementById('myChart').getContext('2d');
         var config = {
             type: 'pie',
+
             data: {
                 datasets: [{
+
                     data: [
                         60,
                         40
                     ],
                     backgroundColor: [
-                        'red', 'orange'
+                        'white', '#FFBC42'
                     ],
-                    label: 'Dataset 1'
+
+                    label: 'Dataset 3',
+                    borderWidth: 0,
+
+
                 }],
-                labels: [
-                    'false primes',
-                    'true primes',
-                ]
+
+                // labels: [
+                //     'false primes',
+                //     'true primes',
+                // ]
             },
             options: {
                 responsive: false,
 
-            }
+
+            },
         };
         var myPieChart = new Chart(ctx, config);
     </script>
