--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="dropdown-content" id="dropdownContent">
                 </div>
             </div>
-            <div id="output" class="">
+            <div id="output" class="d-none">
                 <div class="title">
                     Out of <span class="font-weight-bold" id="maxNumber"></span> numbers:
                 </div>
@@ -51,10 +51,8 @@
                 </div>
 
             <div class="results" id="primeNumbers">
-                <!-- 1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 97,1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 97,1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53,
-                59, 61, 67, 71, 73, 79, 83, 97, -->
-                7243,6763,6299,5851,5419,5003,4603,4219,3851,3499,3163,2843,2539,2251,1979,1723,1483,1259,1051,859,683,523,379,251,139,43,-37,-101,-149,-181,-197,8779,9323,9883,10459,12923,14251,14939,15643,16363,17099,17851,19403,21019,21851,22699,23563,24443,25339,26251,27179,28123,30059,31051,32059,33083,34123,36251,37339,39563,40699,41851,43019,44203,45403,46619,50363,54251,55579,56923,59659,61051,62459,65323
-
+                1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 97,1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 97,1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53,
+                59, 61, 67, 71, 73, 79, 83, 97,
             </div>
         </div>
         </div>
