--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
                     }],
 
-                    // labels: [
-                    //     'false primes',
-                    //     'true primes',
-                    // ]
+                    labels: [
+                        'true primes',
+                        'false primes',
+                    ]
                 },
                 options: {
                     responsive: false,
