--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <section>
-        <!-- <div class="ImageContainer"> -->
-        <!-- <div class="Upper"></div> -->
-        <!-- <div class="Lower"></div> -->
+        <div class="ImageContainer">
+            <div class="Upper"></div>
+            <div class="Lower"></div>
         </div>
         <div>
             <div class="TheMainThree">
