MOREFINAL UI Improv MissingPhoneSupportTho

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <section>
-        <div class="ImageContainer">
+        <div class="ImageContainer" id="TheImage">
             <div class="Upper"></div>
             <div class="Lower"></div>
         </div>
